SERVER-50057 Do not use StringDataSet in OperationShardingState